[metadata]
name=dao.control
author='Sergii Kashaba'
version=0.7.1
description='Deployment Automation and Orchestration Framework'
classifiers=
        Environment :: Console
        Environment :: Web Environment
        Intended Audience :: Developers
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Natural Language :: English
        Operating System :: POSIX :: Linux
        Programming Language :: Python

[files]
namespace_packages=dao
packages=dao
data_files=
    /etc/dao = 
         etc/control.cfg
         etc/logger.cfg

scripts=
    bin/dao-master
    bin/dao-worker
    bin/dao-manage

[entry_points]
console_scripts=
        dao-worker-agent = dao.control.worker.run_manager:run
        dao-master-agent = dao.control.master.run_manager:run
        dao-config-read = dao.control.read_config:main
        dao-manage = dao.control.manage:main
